fix(forms): #3 icon not correctly aligned

--- a/src/forms.scss
+++ b/src/forms.scss
@@ -92,6 +92,10 @@ input {
   margin: spacing('0-5') 0;
 }
 
+label ~ .input-control {
+  margin-top: 0;
+}
+
 .form-group {
   display: flex;
   display: -ms-flexbox;
